# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'newsmlg2'
version = '1.0'
description = 'Python implementation of the NewsML-G2 standard (https://iptc.org/standards/newsml-g2/)'
readme = "README.md"
authors = [{ name = "Brendan Quinn", email = "office@iptc.org" }]
license = "MIT"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ['api', 'media', 'publishing', 'news', 'feed', 'syndication']
dependencies = [
    'lxml',
]
requires-python = ">=3"

[tool.setuptools]
packages = ["NewsMLG2"]
include-package-data = true

[tool.setuptools.package-data]
"NewsMLG2" = ["catalogs/*.xml"]

[project.urls]
Homepage = 'https://github.com/iptc/python-newsmlg2/'
